--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,7 +9,9 @@
     "com.unity.timeline": "1.2.17",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "3.2.16",
+    "com.unity.xr.oculus.android": "2.38.6",
     "com.unity.xr.oculus.standalone": "2.38.4",
+    "com.unity.xr.windowsmr.metro": "4.2.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
